remove location mapping

--- a/_posts/2014-06-02-nycemf.md
+++ b/_posts/2014-06-02-nycemf.md
@@ -3,12 +3,11 @@ layout: concert
 categories: performance
 date: 2014-06-02
 event: New York City Electroacoustic Music Festival
-location:
-  - venue: Abrons Art Center
-    address: 466 Grand St.
-    city: New York City
-    state: NY
-    zip: 10002
+venue: Abrons Art Center
+address: 466 Grand St.
+city: New York City
+state: NY
+zip: 10002
 program:
   - composer: Christopher Chandler
     title: Smoke and Mirrors
