--- a/_posts/2019-02-28-arete.md
+++ b/_posts/2019-02-28-arete.md
@@ -25,6 +25,8 @@ thumbnail: ibarra_berkeley_1000x500.jpg
 
 [Switch~] plays <i>Tarr</i> by Sivan Eldar, the American premiere of our 2016 commission from Timothy McCormack, <i>karst survey</i>, and two world premieres from our international call for scores winners, Esais Järnegard's <i>Songs for Antonin</i> and Adrien Trybucki's <i>Infinite Extension</i> for ensemble and electronics.
 
+<img src="http://switchensemble.github.io/assets/images/arete-poster-1242x1920.jpg" height="960" width="621">
+
 Doors 7:45pm; Music 8pm
 
 More information available here: <a href="https://www.facebook.com/SwitchEnsemble/" target="blank">https://www.facebook.com/SwitchEnsemble/</a>
