added ticket button functionality and links

--- a/_posts/2019-02-28-arete.md
+++ b/_posts/2019-02-28-arete.md
@@ -3,6 +3,8 @@ layout: concert
 categories: performance
 date: 2019-02-28
 time: "8:00 pm"
+tickets:
+  url: https://www.eventbrite.com/e/switch-ensemble-arete-tickets-54896909133
 location:
   institution:
   building:
@@ -23,7 +25,7 @@ program:
 thumbnail: ibarra_berkeley_1000x500.jpg
 ---
 
-[Switch~] plays <i>Tarr</i> by Sivan Eldar, the American premiere of our 2016 commission from Timothy McCormack, <i>karst survey</i>, and two world premieres from our international call for scores winners, Esais Järnegard's <i>Songs for Antonin</i> and Adrien Trybucki's <i>Infinite Extension</i> for ensemble and electronics.
+[Switch~] plays <i>Tarr</i> by Sivan Eldar, the American premiere of our 2016 commission from Timothy McCormack, <i>karst survey</i>, and two world premieres from our international call for scores winners, Esaias Järnegard's <i>Songs for Antonin</i> and Adrien Trybucki's <i>Infinite Extension</i> for ensemble and electronics.
 
 <img src="http://switchensemble.github.io/assets/images/arete-poster-1242x1920.jpg" height="960" width="621">
 
