--- a/_posts/2020-03-21-dimenna.md
+++ b/_posts/2020-03-21-dimenna.md
@@ -16,7 +16,9 @@ program:
     title: new work (2020)
   - composer:
     title:
+text:
+  below: "This project made possible by the kind support of New Music USA and the Ernst von Siemens Musikstiftung"
 thumbnail: diels_filament-1000x500.jpg
 ---
 
-In our flagship concert of our 2019-20 season, the [Switch~ Ensemble] gives the New York City premiere of a new work we have commissioned from Swiss composer Katharina Rosenberger. 
+In our flagship concert of our 2019-20 season, the [Switch~ Ensemble] gives the New York City premiere of a new work we have commissioned from Swiss composer Katharina Rosenberger.
