describe added to recent events

--- a/_posts/concerts-2019/2019-02-28-arete.md
+++ b/_posts/concerts-2019/2019-02-28-arete.md
@@ -1,6 +1,7 @@
 ---
 layout: concert
 categories: performance
+describe: "[Switch~] premieres new commissions from Esaias Järnegard and Adrien Trybucki"
 date: 2019-02-28
 time: "8:00 pm"
 tickets:
