--- a/_posts/concerts-2020/2020-03-21-dimenna.md
+++ b/_posts/concerts-2020/2020-03-21-dimenna.md
@@ -1,6 +1,7 @@
 ---
 layout: concert
 categories: performance
+describe: "[Switch~] gives the NYC premiere of <em>Up-Close</em> by Katharina Rosenberger alongside works by Thorpe Buchanan, Mettens, and Cathy van Eck."
 date: 2020-03-21
 time:
 location:
@@ -13,9 +14,17 @@ location:
   zip: 10018
 program:
   - composer: Katharina Rosenberger
-    title: new work (2020)
-  - composer:
+    title: Up-Close
+    year: 2019
+  - composer: Jason Thorpe Buchanan
+    title: soliloquios del viento
+    year: 2017
+  - composer: Clay Mettens
     title:
+    year:     
+  - composer: Cathy van Eck
+    title: Wings
+    year:
 text:
   below: "This project made possible by the kind support of New Music USA and the Ernst von Siemens Musikstiftung"
 thumbnail: diels_filament-1000x500.jpg
