--- a/_posts/concerts-2020/2020-03-21-dimenna.md
+++ b/_posts/concerts-2020/2020-03-21-dimenna.md
@@ -1,7 +1,7 @@
 ---
 layout: concert
 categories: performance
-describe: "[Switch~] gives the NYC premiere of <em>Up-Close</em> by Katharina Rosenberger alongside works by Thorpe Buchanan, Mettens, and Cathy van Eck."
+describe: "NYC premiere of <em>Up-Close</em> by Katharina Rosenberger alongside works by Thorpe Buchanan, Mettens, and Cathy van Eck."
 date: 2020-03-21
 time:
 location:
