--- a/_posts/concerts-2020/2020-03-21-dimenna.md
+++ b/_posts/concerts-2020/2020-03-21-dimenna.md
@@ -3,7 +3,7 @@ layout: concert
 categories: performance
 describe: "NYC premiere of <em>Up-Close</em> by Katharina Rosenberger alongside works by Thorpe Buchanan, Mettens, and Cathy van Eck."
 date: 2020-03-21
-time:
+time: "7:30pm"
 location:
   institution: DiMenna Center for Classical Music
   building:
@@ -20,8 +20,8 @@ program:
     title: soliloquios del viento
     year: 2017
   - composer: Clay Mettens
-    title:
-    year:     
+    title: Into the empty sky
+    year: 2017     
   - composer: Cathy van Eck
     title: Wings
     year:
