update march concert listings

--- a/_posts/concerts-2020/2020-03-21-dimenna.md
+++ b/_posts/concerts-2020/2020-03-21-dimenna.md
@@ -24,9 +24,13 @@ program:
     year: 2017     
   - composer: Cathy van Eck
     title: Wings
-    year:
+    year:  
+  - composer: Dieter Ammann
+    title: CUTE
+    year: 2011
+
 text:
-  below: "This project made possible by the kind support of New Music USA and the Ernst von Siemens Musikstiftung"
+  below: "This project made possible by the kind support of New Music USA, Pro Helvetia, the Swiss Arts Council, and the Ernst von Siemens Musikstiftung."
 thumbnail: events/rosenberger_1200x700.jpg
 ---
 
