fundraising campaign update edits

--- a/_posts/concerts-2020/2020-03-21-dimenna.md
+++ b/_posts/concerts-2020/2020-03-21-dimenna.md
@@ -4,8 +4,7 @@ categories: performance
 describe: "NYC premiere of <em>Up-Close</em> by Katharina Rosenberger alongside works by Thorpe Buchanan, Mettens, and Cathy van Eck."
 date: 2020-03-21
 time: "7:30pm"
-tickets:
-  url: https://www.eventbrite.com/e/switch-ensemble-presents-up-close-tickets-93374438459
+status: "Cancelled due to COVID-19"
 location:
   institution: DiMenna Center for Classical Music
   building:
