--- a/_posts/concerts-2021/2021-05-02-mizzou.md
+++ b/_posts/concerts-2021/2021-05-02-mizzou.md
@@ -10,10 +10,10 @@ location:
   building: The Internet
 program:
   - composer: Santiago Beis
-    title: Cardumen (I think this title will change)
+    title: Tangram
     year: 2021
   - composer: Luis Bezerra
-    title: Invisible Heritage
+    title: Jongo
     year: 2021
   - composer: Oswald Huynh
     title: Black Petal
@@ -31,3 +31,5 @@ thumbnail: switch-mizzou.jpg
 ---
 
 Please join us for a virtual concert capping off a residency at the University of Missouri hosted by the the Mizzou New Music Initiative, which features the music of Mizzou student composers.
+
+[Check out the Facebook event here](https://www.facebook.com/events/450294472938629/?acontext=%7B%22ref%22%3A%2252%22%2C%22action_history%22%3A%22[%7B%5C%22surface%5C%22%3A%5C%22share_link%5C%22%2C%5C%22mechanism%5C%22%3A%5C%22share_link%5C%22%2C%5C%22extra_data%5C%22%3A%7B%5C%22invite_link_id%5C%22%3A3899079900195987%7D%7D]%22%7D) and the [Mizzou School of Music YouTube page](https://www.youtube.com/channel/UCVqHQYMI7cP8SE6Z3XDwSjw) where the performance will be livestreamed.
