--- a/_posts/concerts-2021/2021-05-02-mizzou.md
+++ b/_posts/concerts-2021/2021-05-02-mizzou.md
@@ -7,13 +7,13 @@ time: "8:30pm CT / 9:30pm ET"
 status:
 location:
   institution: University of Missouri
-  building: The Internet
+  city: The Internet
 program:
   - composer: Santiago Beis
     title: Tangram
     year: 2021
   - composer: Luis Bezerra
-    title: Jongo
+    title: Invisible Heritage
     year: 2021
   - composer: Oswald Huynh
     title: Black Petal
@@ -22,7 +22,7 @@ program:
     title: Strata
     year: 2021
   - composer: Zachary James Watkins
-    title: Do Your Best Never Say Can’t and Love One Another
+    title: "Do Your Best, Never Say Can’t, and Love One Another"
     year: 2021
 text:
   below:
