--- a/_posts/concerts-2021/2021-04-24-seamus.md
+++ b/_posts/concerts-2021/2021-04-24-seamus.md
@@ -17,6 +17,7 @@ program:
     year: 2021
   - composer: Anuj Bhutani
     title: To The Lighthouse
+    year: 2019
   - composer: Eren Gumrukcuoglu
     title: Pareidolia - Section V
   - composer: Ted Moore
