--- a/_posts/concerts-2021/2021-05-02-mizzou.md
+++ b/_posts/concerts-2021/2021-05-02-mizzou.md
@@ -7,7 +7,7 @@ time: "8:30pm CT / 9:30pm ET"
 status:
 location:
   institution: University of Missouri
-  city: The Internet
+  building: The Internet
 program:
   - composer: Santiago Beis
     title: Tangram
