update concert listings and add seamus image

--- a/_posts/concerts-2021/2021-04-24-seamus.md
+++ b/_posts/concerts-2021/2021-04-24-seamus.md
@@ -27,7 +27,7 @@ program:
     title: Jitterbug
 text:
   below:
-thumbnail: bhutani-lighthouse_400.jpg
+thumbnail: seamus2021.png
 ---
 
 Please join us for a concert featuring music by SEAMUS Award Winner Annea Lockwood, Zachary James Watkins' [Switch~] commission of *Do Your Best Never Say Can't and Love One Another*, and other SEAMUS guest composers.
