--- a/_posts/concerts-2021/2021-10-15-dimenna.md
+++ b/_posts/concerts-2021/2021-10-15-dimenna.md
@@ -5,7 +5,7 @@ describe: "Premiere of <em>Up-Close</em> by Katharina Rosenberger alongside the 
 date: 2021-10-15
 time: "7:30pm"
 location:
-  institution: DiMenna Center for Classical Music
+  institution:
   building:
   venue: DiMenna Center for Classical Music
   address: 450 W 37th St.
