--- a/_posts/concerts-2021/2021-10-30-sinuston.md
+++ b/_posts/concerts-2021/2021-10-30-sinuston.md
@@ -1,13 +1,13 @@
 ---
 layout: concert
 categories: performance
-describe: "World premiere of Leilehua "Anne" Lanzilotti's <em>hānau ka ua</em> alongside the European premiere of <em>Up-Close</em> by Katharina Rosenberger. Recent works by Jason Thorpe Buchanan, Ted Moore, and Igor C. Silva"
+describe: "World premiere of Leilehua Anne Lanzilotti's <em>hānau ka ua</em> alongside the European premiere of <em>Up-Close</em> by Katharina Rosenberger. Recent works by Jason Thorpe Buchanan, Ted Moore, and Igor C. Silva"
 date: 2021-10-30
 time: "7:00pm CET"
 location:
   institution: SinusTon
   building:
-  venue: SinusTon
+  venue: Mortizhof Magdeburg
   address:
   city: Magdeburg
   country: Germany
@@ -27,10 +27,11 @@ program:
   - composer: Katharina Rosenberger
     title: Up-Close
     year: 2019
-
 text:
-  below: "This project made possible by the kind support of the MAP Fund and the Mid Atlantic Arts Foundation."
+  below: "This engagement is supported by Mid Atlantic Arts through USArtists International in partnership with the National Endowment for the Arts and the Andrew W. Mellon Foundation."
 thumbnail: events/rosenberger_1200x700.jpg
 ---
 
-In our return to Europe, the [Switch~ Ensemble] gives the world premiere of Leilehua "Anne" Lanzilotti's <em>hānau ka ua</em> alongside the European premiere of <em>Up-Close</em> by Katharina Rosenberger. Recent works by Jason Thorpe Buchanan, Ted Moore, and Igor C. Silva"
+In our return to Europe, the [Switch~ Ensemble] gives the world premiere of Leilehua Anne Lanzilotti's <em>hānau ka ua</em> alongside the European premiere of <em>Up-Close</em> by Katharina Rosenberger. Recent works by Jason Thorpe Buchanan, Ted Moore, and Igor C. Silva.
+
+<em>This engagement is supported by Mid Atlantic Arts through USArtists International in partnership with the National Endowment for the Arts and the Andrew W. Mellon Foundation.</em>
