--- a/_posts/concerts-2022/2022-04-23-colby.md
+++ b/_posts/concerts-2022/2022-04-23-colby.md
@@ -1,7 +1,7 @@
 ---
 layout: concert
 categories: performance
-describe: "A residency at Colby College where we will be performing works by Assistant Professor José Martínez."
+describe: "[Switch~ Ensemble] residency at Colby College in Waterville, Maine, performing music by José Martínez, Kelley Sheehan, Anna-Louise Walton, and more."
 date: 2022-04-23
 time: "7:00pm"
 location:
@@ -13,15 +13,19 @@ location:
   state: ME
   zip: 04901
 program:
-  - composer: José Martínez
-    title: TBA
-    year:   
-  - composer: Kelley Sheehan
-    title: the bends
-    year: 2020
+- composer: José Martínez
+  title: 39 inside
+- composer: José Martínez
+  title: Instruction Manual
+- composer: Anna-Louise Walton
+  title: Hapax legomenon
+  year: 2022
+- composer: Kelley Sheehan
+  title: the bends
+  year: 2020
 text:
   below: ""
-thumbnail: 
+thumbnail:
 ---
 
-In our return Europe, the [Switch~ Ensemble] gives the world premiere of Leilehua "Anne" Lanzilotti's <em>hānau ka ua</em> alongside the European premiere of <em>Up-Close</em> by Katharina Rosenberger. Recent works by Jason Thorpe Buchanan, Ted Moore, and Igor C. Silva"
+The [Switch~ Ensemble] is ensemble-in-residence at Colby College in Waterville, Maine, for performances of works by José Martínez, Kelley Sheehan, Anna-Louise Walton, and more.
