--- a/_posts/concerts-2022/2022-02-13-mizzou.md
+++ b/_posts/concerts-2022/2022-02-13-mizzou.md
@@ -3,7 +3,7 @@ layout: concert
 categories: performance
 describe: "[Switch~] is Ensemble-in-Residence at the University of Missouri. Works by Leilehua Lanzilotti, Christopher Chandler, and Heather Stebbins at the George Caleb Bingham Art Gallery."
 date: 2022-02-13
-time:
+time: "2:00pm"
 location:
   institution: University of Missouri
   building:
@@ -19,12 +19,9 @@ program:
     title: Strata
   - composer: Heather Stebbins
     title: Among Arrows
-headerImage: headers/switch-final-press-photo_1920x1080.jpg
-thumbnail: updates/Rosenberger 6-camvln1-330.jpg
-tags:
-  - 2022
-  - switch
-  - new
+text:
+  below: ""
+thumbnail:
 ---
 
 The [Switch~ Ensemble] is in residence at the University of Missouri for two performances of [Switch~] repertoire and student works.
