--- a/_posts/concerts-2022/2022-02-15-mizzou.md
+++ b/_posts/concerts-2022/2022-02-15-mizzou.md
@@ -3,7 +3,7 @@ layout: concert
 categories: performance
 describe: "[Switch~] is Ensemble-in-Residence at the University of Missouri. Works by Cathy van Eck, Anna-Louise Walton, Jason Thorpe Buchanan, and Mizzou student composers."
 date: 2022-02-15
-time:
+time: "7:30pm"
 location:
   institution: University of Missouri
   building:
@@ -24,9 +24,9 @@ program:
     title: Black Petal
   - composer: Anna-Louise Walton
     title: Uttered
-tags:
-  - 2022
-  - switch
+text:
+  below: ""
+thumbnail:
 ---
 
 the [Switch~ Ensemble] is in residence at the University of Missouri for two performances of [Switch~] repertoire and student works. Missouri premiere of Jason Thorpe Buchanan's <em>soliloquios del viento</em>.
