--- a/_posts/concerts-2021/2021-05-02-mizzou.md
+++ b/_posts/concerts-2021/2021-05-02-mizzou.md
@@ -8,6 +8,7 @@ status:
 location:
   institution: University of Missouri
   building: The Internet
+  venue: The Internet
 program:
   - composer: Santiago Beis
     title: Tangram
