fixed buffalo date

--- a/_posts/concerts-2021/2021-05-02-mizzou.md
+++ b/_posts/concerts-2021/2021-05-02-mizzou.md
@@ -9,6 +9,7 @@ location:
   institution: University of Missouri
   building: The Internet
   venue: The Internet
+  city: The Internet
 program:
   - composer: Santiago Beis
     title: Tangram
