--- a/_posts/concerts-2021/2021-10-15-dimenna.md
+++ b/_posts/concerts-2021/2021-10-15-dimenna.md
@@ -11,7 +11,7 @@ location:
   address: 450 W 37th St.
   city: New York
   state: NY
-  zip: 10018
+  zip: 10018 d
 program:
   - composer: Katharina Rosenberger
     title: Up-Close
