--- a/_posts/concerts-2021/2021-04-24-seamus.md
+++ b/_posts/concerts-2021/2021-04-24-seamus.md
@@ -7,7 +7,9 @@ time: "3:30pm"
 status:
 location:
   institution: SEAMUS National Conference
+  building: The Internet
   venue: The Internet
+  city: The Internet
 program:
   - composer: Christopher Chandler
     title: Strata
