updated repertoire as of Jan 2022

--- a/_posts/concerts-2022/2022-02-13-mizzou.md
+++ b/_posts/concerts-2022/2022-02-13-mizzou.md
@@ -14,7 +14,7 @@ location:
   zip: 65201
 program:
   - composer: Leilehua Lanzilotti
-    title: Born is the Rain
+    title: hānau ka ua (born is the rain)
   - composer: Christopher Chandler
     title: Strata
   - composer: Heather Stebbins
