major update to include image thumbnails below and added lots of content

--- a/_posts/announcements-2019/2019-02-01-arete.md
+++ b/_posts/announcements-2019/2019-02-01-arete.md
@@ -4,6 +4,7 @@ title: "Areté Venue and Gallery"
 date: 2018-02-01
 categories: news
 author: "Jason Thorpe Buchanan"
+thumbnail: updates/2019-arete-switch-jarnegard-330.jpg
 ---
 
 Switch~ presents the much-anticipated world-premieres of commissions by Esaias Järnegard and Adrien Trybucki, winners of our 2016-17 international competition. 
