--- a/_posts/concerts-2022/2022-02-13-mizzou.md
+++ b/_posts/concerts-2022/2022-02-13-mizzou.md
@@ -21,7 +21,7 @@ program:
     title: Among Arrows
 text:
   below: ""
-thumbnail:
+thumbnail: updates/wings-3-cam1-2-330.jpg
 ---
 
 The [Switch~ Ensemble] is in residence at the University of Missouri for two performances of [Switch~] repertoire and student works.
