--- a/_posts/concerts-2022/2022-02-15-mizzou.md
+++ b/_posts/concerts-2022/2022-02-15-mizzou.md
@@ -26,7 +26,7 @@ program:
     title: Uttered
 text:
   below: ""
-thumbnail:
+thumbnail: updates/2021-switch-soliloquios-19-330.jpg
 ---
 
 the [Switch~ Ensemble] is in residence at the University of Missouri for two performances of [Switch~] repertoire and student works. Missouri premiere of Jason Thorpe Buchanan's <em>soliloquios del viento</em>.
