major concert images overhaul plus a few other fixes

--- a/_posts/concerts-2018/2018-09-14-spectrum.md
+++ b/_posts/concerts-2018/2018-09-14-spectrum.md
@@ -23,6 +23,7 @@ program:
   - composer: Piyawat Louilarpprasert
     title: silhouette
 thumbnail: updates/spectrum-switch-2018.jpg
+header: auto-add/spectrum/2018-switch-spectrum-1.jpg
 ---
 
 [Switch~] plays works by Katie Balch, Chaya Czernowin, Clara Iannotta, Timothy McCormack, and Piyawat Louilarpprasert at Spectrum on "Spectral Fridays" an eclectic series of art, food, drink, and lots and lots of music, curated by <a href="gabrielzucker.com/fridays.html">Gabriel Zucker</a>.
