--- a/_posts/concerts-2021/2021-04-24-seamus.md
+++ b/_posts/concerts-2021/2021-04-24-seamus.md
@@ -23,13 +23,14 @@ program:
   - composer: Eren Gumrukcuoglu
     title: Pareidolia - Section V
   - composer: Ted Moore
-    title: frame
+    title: quartet
     year: 2021
   - composer: Annea Lockwood
     title: Jitterbug
 text:
   below:
 thumbnail: seamus2021.png
+header: repertoire-images/moore_quartet_1000.jpg
 ---
 
 Please join us for a concert featuring music by SEAMUS Award Winner Annea Lockwood, Zachary James Watkins' [Switch~] commission of *Do Your Best Never Say Can't and Love One Another*, and other SEAMUS guest composers.
