--- a/_posts/concerts-2021/2021-05-02-mizzou.md
+++ b/_posts/concerts-2021/2021-05-02-mizzou.md
@@ -28,7 +28,8 @@ program:
     year: 2021
 text:
   below:
-thumbnail: switch-mizzou.jpg
+thumbnail: events/switch-mizzou.jpg
+header: events/switch-mizzou.jpg
 ---
 
 Please join us for a virtual concert capping off a residency at the University of Missouri hosted by the the Mizzou New Music Initiative, which features the music of Mizzou student composers.
