--- a/_posts/concerts-2021/2021-10-30-sinuston.md
+++ b/_posts/concerts-2021/2021-10-30-sinuston.md
@@ -30,6 +30,8 @@ program:
 text:
   below: "This engagement is supported by Mid Atlantic Arts through USArtists International in partnership with the National Endowment for the Arts and the Andrew W. Mellon Foundation."
 thumbnail: updates/Rosenberger-6-camvln1-330.jpg
+header: auto-add/featured/2021-Silva-sinuston-1800.jpg
+
 ---
 
 In our return to Europe, the [Switch~ Ensemble] gives the world premiere of Leilehua Anne Lanzilotti's <em>hānau ka ua</em> alongside the European premiere of <em>Up-Close</em> by Katharina Rosenberger. Recent works by Jason Thorpe Buchanan, Ted Moore, and Igor C. Silva.
