--- a/_posts/concerts-2022/2022-02-13-mizzou.md
+++ b/_posts/concerts-2022/2022-02-13-mizzou.md
@@ -22,6 +22,7 @@ program:
 text:
   below: ""
 thumbnail: updates/wings-3-cam1-2-330.jpg
+header: auto-add/featured/2021-wings-3-cam1-2.jpg
 ---
 
 The [Switch~ Ensemble] is in residence at the University of Missouri for two performances of [Switch~] repertoire and student works.
