--- a/_posts/concerts-2022/2022-03-29-buffalo.md
+++ b/_posts/concerts-2022/2022-03-29-buffalo.md
@@ -27,6 +27,7 @@ program:
 text:
   below: ""
 thumbnail: updates/ibarra_berkeley_250x125.jpg
+header: header-switch-copper.jpg
 ---
 
 Our flagship concert of our 2021-22 season, the [Switch~ Ensemble] premieres five new commissions from Leilehua Lanzilotti, Santiago Diez Fischer, Anna-Louise Walton, Forbes Graham, and Kelley Sheehan, with commissioned with support from the MAP Fund, the UCA Foundation (Argentina), New Music USA, the Boston LAB Grant, and our own commissioning prize, respectively.
