--- a/_posts/concerts-2022/2022-04-23-colby.md
+++ b/_posts/concerts-2022/2022-04-23-colby.md
@@ -26,6 +26,7 @@ program:
 text:
   below: ""
 thumbnail: updates/switch-press_330.jpg
+header: header-switch-copper.jpg
 ---
 
 The [Switch~ Ensemble] is ensemble-in-residence at Colby College in Waterville, Maine, for performances of works by José Martínez, Kelley Sheehan, Anna-Louise Walton, and more.
