--- a/_posts/announcements-2018/2018-09-01-spectrum.md
+++ b/_posts/announcements-2018/2018-09-01-spectrum.md
@@ -5,6 +5,7 @@ date: 2018-09-01
 categories: news
 author: "Jason Thorpe Buchanan"
 thumbnail: updates/spectrum-switch-2018.jpg
+header: auto-add/spectrum/2018-switch-spectrum-1.jpg
 ---
 
 Our opening show for the 2018-19 season, with works by Katherine Balch, Clara Iannotta, Timothy McCormack, Chaya Czernowin, and Piyawat Louilarpprasert.
