--- a/_posts/concerts-2014/2014-06-02-nycemf.md
+++ b/_posts/concerts-2014/2014-06-02-nycemf.md
@@ -14,4 +14,6 @@ program:
     title: Smoke and Mirrors
   - composer: Jason Thorpe Buchanan
     title: "Asymptotic Flux: First Study in Entropy"
+header: repertoire-images/thorpebuchanan_asymptoticflux_1000x500px.jpg
+
 ---
