--- a/_posts/concerts-2019/2019-02-28-arete.md
+++ b/_posts/concerts-2019/2019-02-28-arete.md
@@ -24,6 +24,8 @@ program:
   - composer: Adrien Trybucki
     title: Infinite Extension
 thumbnail: repertoire-images/ibarra_berkeley_1000x500.jpg
+header: repertoire-images/trybucki-infinite-extension_1000.jpg
+
 ---
 
 [Switch~] plays <i>Tarr</i> by Sivan Eldar, the American premiere of our 2016 commission from Timothy McCormack, <i>karst survey</i>, and two world premieres from our international call for scores winners, Esaias Järnegard's <i>Songs for Antonin</i> and Adrien Trybucki's <i>Infinite Extension</i> for ensemble and electronics.
