--- a/_posts/concerts-2020/2020-03-21-dimenna.md
+++ b/_posts/concerts-2020/2020-03-21-dimenna.md
@@ -33,6 +33,7 @@ program:
 text:
   below: "This project made possible by the kind support of New Music USA, Pro Helvetia, the Swiss Arts Council, and the Ernst von Siemens Musikstiftung."
 thumbnail: events/rosenberger_1200x700.jpg
+header: auto-add/featured/2021-switch-soliloquios-19-1000px.jpg
 ---
 
 In our flagship concert of our 2019-20 season, the [Switch~ Ensemble] gives the New York City premiere of a new work we have commissioned from Swiss composer Katharina Rosenberger.
