chandler, soliloquios, mason, schubert, moore, sheets images updated

--- a/_posts/concerts-2022/2022-03-29-buffalo.md
+++ b/_posts/concerts-2022/2022-03-29-buffalo.md
@@ -20,8 +20,8 @@ program:
     title: Hapax legomenon
     year: 2021  
   - composer: Forbes Graham
-    title: new work
-    year: 2021     
+    title: Inflection
+    year: 2022    
   - composer: David Felder
     title: a garland (for Bruce)
 text:
