--- a/_posts/concerts-2021/2021-10-15-dimenna.md
+++ b/_posts/concerts-2021/2021-10-15-dimenna.md
@@ -36,6 +36,9 @@ text:
   below: "This project made possible by the kind support of New Music USA, Pro Helvetia, the Swiss Arts Council, and the Ernst von Siemens Musikstiftung."
 thumbnail: events/rosenberger_1200x700.jpg
 header: events/rosenberger_1200x700.jpg
+
+
+2016-santos_lamento_1000x500px.jpg
 ---
 
 In our return to in-person concerts following the cancellation of this program in 2020, the [Switch~ Ensemble] gives the New York City premiere our commission from Swiss composer Katharina Rosenberger, the American premiere of Jason Thorpe Buchanan's <em>soliloquios del viento</em>, a new commission from Erika Dohi, and works by Clay Mettens, and Cathy van Eck, and Dieter Amman."
