updated news and graphics

--- a/_posts/announcements-2021/2021-11-07-sinuston.md
+++ b/_posts/announcements-2021/2021-11-07-sinuston.md
@@ -4,8 +4,10 @@ title: "SinusTon Festival Review"
 date: 2021-11-07
 categories: news
 author: "Jason Thorpe Buchanan"
-thumbnail: updates/switch-press_330.jpg
-header: updates/switch-press_330.jpg
+thumbnail: updates/2021-Silva-sinuston-400.jpg
+header: auto-add/featured/2021-Silva-sinuston-1800.jpg
 ---
 
 Review by Thoralf Winkler of our SinusTon Festival Concert Oct. 30: "The [Switch~ Ensemble] moved with its music - some of which was specially composed for the ensemble - at the limits of conventional music, and sometimes even exceeded this too. The concert-goers had to be prepared for a lot of experimental works, but they also got musical experiences that can only be given live." of Jason Thorpe Buchanan's *soliloquios del viento*, Winkler wrote: "Sounds and noises seem to want to tell of a secret - without ultimately revealing it."
+
+<a href="https://blende-acht.blogspot.com/2021/11/sinuston-sound-diffusion.html">https://blende-acht.blogspot.com/2021/11/sinuston-sound-diffusion.html</a>
