--- a/_posts/concerts-2021/2021-04-24-seamus.md
+++ b/_posts/concerts-2021/2021-04-24-seamus.md
@@ -29,7 +29,7 @@ program:
     title: Jitterbug
 text:
   below:
-thumbnail: seamus2021.png
+thumbnail: updates/seamus2021-330.jpg
 header: repertoire-images/moore_quartet_1000.jpg
 ---
 
