concert updates, incomplete

--- a/_posts/concerts-2022/2022-03-29-buffalo.md
+++ b/_posts/concerts-2022/2022-03-29-buffalo.md
@@ -1,7 +1,7 @@
 ---
 layout: concert
 categories: performance
-describe: "Ensemble-in-Residence, University at Buffalo. Works by Santiago Diez Fischer, Anna-Louise Walton, Forbes Graham, David Felder, and more"
+describe: "Ensemble-in-Residence, University at Buffalo. Works by Santiago Diez Fischer, Anna-Louise Walton, Forbes Graham, Heather Stebbins, David Felder, and more"
 date: 2022-03-29
 time: "7:00pm"
 location:
@@ -13,21 +13,23 @@ location:
   state: NY
   zip:
 program:
-  - composer: Santiago Diez Fischer
-    title: perpetual green switch
-    year: 2021
-  - composer: Anna-Louise Walton
-    title: Hapax legomenon
-    year: 2021  
-  - composer: Forbes Graham
-    title: Inflection
-    year: 2022    
-  - composer: David Felder
-    title: a garland (for Bruce)
+- composer: Heather Stebbins
+  title: Among Arrows
+- composer: Santiago Diez Fischer
+  title: perpetual green switch
+  year: 2021
+- composer: Anna-Louise Walton
+  title: Hapax legomenon
+  year: 2021  
+- composer: Forbes Graham
+  title: Inflection
+  year: 2022    
+- composer: David Felder
+  title: a garland (for Bruce)
 text:
   below: ""
 thumbnail: updates/ibarra_berkeley_250x125.jpg
 header: header-switch-copper.jpg
 ---
 
-Our flagship concert of our 2021-22 season, the [Switch~ Ensemble] premieres five new commissions from Leilehua Lanzilotti, Santiago Diez Fischer, Anna-Louise Walton, Forbes Graham, and Kelley Sheehan, with commissioned with support from the MAP Fund, the UCA Foundation (Argentina), New Music USA, the Boston LAB Grant, and our own commissioning prize, respectively.
+The [Switch~ Ensemble] premieres several new commissions from Santiago Diez Fischer, Anna-Louise Walton, and Forbes Graham following their NYC premiere. These works were commissioned with support from the UCA Foundation (Argentina), New Music USA, and the Boston LAB Grant.
