updated rep images for walton, graham, sheehan, fixed walton title

--- a/_posts/concerts-2022/2022-03-29-buffalo.md
+++ b/_posts/concerts-2022/2022-03-29-buffalo.md
@@ -17,10 +17,10 @@ program:
   title: Among Arrows
 - composer: Santiago Diez Fischer
   title: perpetual green switch
-  year: 2021
+  year: 2022
 - composer: Anna-Louise Walton
-  title: Hapax legomenon
-  year: 2021  
+  title: Crossing
+  year: 2022
 - composer: Forbes Graham
   title: Inflection
   year: 2022    
