--- a/_posts/concerts-2022/2022-04-23-colby.md
+++ b/_posts/concerts-2022/2022-04-23-colby.md
@@ -1,7 +1,7 @@
 ---
 layout: concert
 categories: performance
-describe: "[Switch~ Ensemble] residency at Colby College in Waterville, Maine, performing music by José Martínez, Kelley Sheehan, Anna-Louise Walton, and more."
+describe: "[Switch~ Ensemble] residency at Colby College in Waterville, Maine, performing music by José Martínez, Kelley Sheehan, Heather Stebbins, Forbes Graham, and more."
 date: 2022-04-23
 time: "7:00pm"
 location:
@@ -15,14 +15,14 @@ location:
 program:
 - composer: José Martínez
   title: 39 inside
-- composer: José Martínez
-  title: Instruction Manual
-- composer: Anna-Louise Walton
-  title: Hapax legomenon
-  year: 2022
 - composer: Kelley Sheehan
   title: the bends
   year: 2021
+- composer: Heather Stebbins
+  title: Among Arrows
+- composer: Forbes Graham
+  title: "Inflection: Beacon Hill/Roxbury"
+  year: 2022
 text:
   below: ""
 thumbnail: updates/switch-press_330.jpg
