--- a/_posts/concerts-2022/2022-11-17-upstate.md
+++ b/_posts/concerts-2022/2022-11-17-upstate.md
@@ -17,8 +17,8 @@ program:
   title: new work
 - composer: Sarah Hennies
   title:
-- composer:
-  title:
+- composer: Jen Kutler
+  title: new work
 - composer:
   title:
 text:
@@ -27,4 +27,4 @@ thumbnail: updates/switch-press_330.jpg
 header: header-switch-copper.jpg
 ---
 
-The [Switch~ Ensemble] presents two upstate NY concerts supported by NYSCA. Featuring a new commission from Victoria Cheah and works by Sarah Hennies + more.
+The [Switch~ Ensemble] presents two upstate NY concerts supported by NYSCA. Featuring new commissions from Victoria Cheah, Jen Kutler, and works by Sarah Hennies + more.
