hennies name fix

--- a/_posts/announcements-2022/2022-09-01-nysca.md
+++ b/_posts/announcements-2022/2022-09-01-nysca.md
@@ -8,4 +8,4 @@ thumbnail: updates/NYSCA-Logo-White-300x84.jpg
 header: auto-add/featured/2021-Silva-sinuston-1800.jpg
 ---
 
-We're pleased to have received a grant from NYSCA to support our upcoming upstate NY performances in November, featuring new commissions from Victoria Cheah, Jen Kutler, and works by Sarah Heinnies + more. https://www.governor.ny.gov/news/governor-hochul-announces-historic-140-million-arts-and-culture-grant-funding-through-new-york
+We're pleased to have received a grant from NYSCA to support our upcoming upstate NY performances in November, featuring new commissions from Victoria Cheah, Jen Kutler, and works by Sarah Hennies + more. https://www.governor.ny.gov/news/governor-hochul-announces-historic-140-million-arts-and-culture-grant-funding-through-new-york
