updates to NYSCA tour concerts

--- a/_posts/concerts-2022/2022-11-18-upstate.md
+++ b/_posts/concerts-2022/2022-11-18-upstate.md
@@ -2,25 +2,25 @@
 layout: concert
 categories: performance
 describe: "[Switch~ Ensemble] performs two new commissions from Victoria Cheah and Jen Kutler, alongside works by Sarah Hennies and Julius Eastman"
-date: 2022-11-19
-time: "7:30pm"
+date: 2022-11-18
+time: "7pm"
 location:
-  institution:
+  institution: PS21
   building:
-  venue: Hallwalls Contemporary Arts Center
-  address: 341 Delaware Ave
-  city: Buffalo
+  venue: Black Box Theater
+  address: 2980 New York 66
+  city: Chatham
   state: NY
-  zip: 14202
+  zip: 12037
 program:
-  - composer: Sarah Hennies
-    title: Everything Else (2016)
-  - composer: Victoria Cheah
-    title: Hard Columns You Within (2022)
-  - composer: Julius Eastman
-    title: Buddha (1984)
-  - composer: Jen Kutler
-    title: Chatter Marks (2022)
+- composer: Sarah Hennies
+  title: Everything Else (2016)
+- composer: Victoria Cheah
+  title: Hard Columns You Within (2022)
+- composer: Julius Eastman
+  title: Buddha (1984)
+- composer: Jen Kutler
+  title: Chatter Marks (2022)
 text:
   below: ""
 thumbnail: updates/switch-press_330.jpg
