--- a/_posts/concerts-2022/2022-11-18-upstate.md
+++ b/_posts/concerts-2022/2022-11-18-upstate.md
@@ -1,9 +1,11 @@
 ---
 layout: concert
 categories: performance
-describe: "[Switch~ Ensemble] performs two new commissions from Victoria Cheah and Jen Kutler, alongside works by Sarah Hennies and Julius Eastman"
+describe: "[Switch~ Ensemble] performs Resonant Mechanisms: The Experimental Tradition in Upstate New York, a concert at PS21 in Chatham, NY featuring two new commissions from Victoria Cheah and Jen Kutler, alongside works by Sarah Hennies and Julius Eastman"
 date: 2022-11-18
 time: "7pm"
+tickets:
+  url: https://www.simpletix.com/e/switch-ensemble-resonant-mechanisms-the-e-tickets-117132
 location:
   institution: PS21
   building:
@@ -26,6 +28,8 @@ text:
 thumbnail: updates/switch-press_330.jpg
 header: header-switch-copper.jpg
 ---
+
+Tickets: $25 General, $20 PS21 Members, *FREE* Students & Youth
 
 The [Switch~ Ensemble] presents a concert of new and old works, engaging with the rich tradition of experimental music in upstate New York. Commissions from Victoria Cheah and Jen Kutler are featured, for quintet and electronics of contrasting modalities. Jen Kutler’s new work is for ensemble and analog machinery, digitally controlled and activated in response to the musicians. Kutler’s artistic practice utilizes “modified found objects that are cultural signifiers of power, gender, queerness and intimacy,” exploring “common and discrepant experiences of familiar social tones in immersive sound and media environments.”
 
