Pluta premiere update

--- a/_posts/concerts-2023/2023-02-09-NYC.md
+++ b/_posts/concerts-2023/2023-02-09-NYC.md
@@ -1,30 +1,30 @@
 ---
 layout: concert
 categories: performance
-describe: "[Switch~ Ensemble] presents a new commission from Sam Pluta alongside recent collaborations with Victoria Cheah, Zachary James Watkins, and more."
+describe: "[Switch~ Ensemble] performs a new commission from Sam Pluta, recent commissions from Victoria Cheah and Zachary James Watkins, and a performance of Julius Eastman's Buddha."
 date: 2023-02-09
 time: "7:30pm"
 location:
   institution: The Clemente
   building:
-  venue:
-  address:
-  city:
-  state:
-  zip:
+  venue: Flamboyan Theater
+  address: 107 Suffolk St. \#312
+  city: New York
+  state: NY
+  zip: 10002
 program:
 - composer: Victoria Cheah
-  title: new work
-- composer: Sam Pluta
-  title: new work
+  title: Hard columns you within (2022)
+- composer: Julius Eastman
+  title: Buddha (1984)
 - composer: Zachary James Watkins
-  title:
-- composer:
-  title:
+  title: Do Your Best, Never Say Can’t, and Love One Another (2020)
+- composer: Sam Pluta
+  title: Tectonics (2023)
 text:
   below: ""
 thumbnail: updates/switch-press_330.jpg
 header: header-switch-copper.jpg
 ---
 
-The [Switch~ Ensemble] presents a new commission from Sam Pluta alongside recent collaborations with Victoria Cheah, Zachary James Waktins, and more.
+[Switch~ Ensemble] performs a new commission from Sam Pluta, recent commissions from Victoria Cheah and Zachary James Watkins, and a performance of Julius Eastman's Buddha.
