NYSCA language update

--- a/_posts/concerts-2022/2022-11-18-ps21.md
+++ b/_posts/concerts-2022/2022-11-18-ps21.md
@@ -39,4 +39,4 @@ Sarah Hennies is a composer based in Upstate NY whose work is concerned with a v
 
 Julius Eastman lived in upstate New York and NYC for much of his career. While his work was under-appreciated during his lifetime it has gained significant recognition in the past decade. NPR has described his music as “challenging, mischievously irreverent, and sometimes ecstatic”. Buddha (1984) is a late period open instrumentation work, a single-page, hand drawn score of a resonating oval encompassing 20 staves of non-durational pitches, without performance instructions.
 
-With support from the New York State Council on the Arts and the Amphion Foundation.
+*Resonant Mechanisms is made possible by the New York State Council on the Arts with the support of the Office of the Governor and the New York State Legislature. Our program is also made possible with support from the Amphion Foundation.*
