updates to buffalo gig

--- a/_posts/concerts-2022/2022-03-29-buffalo.md
+++ b/_posts/concerts-2022/2022-03-29-buffalo.md
@@ -5,13 +5,13 @@ describe: "Ensemble-in-Residence, University at Buffalo. Works by Santiago Diez 
 date: 2022-03-29
 time: "7:00pm"
 location:
-  institution:
-  building:
-  venue: University at Buffalo
-  address:
+  institution: University at Buffalo
+  building: 
+  venue: Lippes Hall
+  address: 103 Center For The Arts
   city: Buffalo
   state: NY
-  zip:
+  zip: 14260
 program:
 - composer: Heather Stebbins
   title: Among Arrows
