--- a/_posts/concerts-2023/2023-03-02-buffalo.md
+++ b/_posts/concerts-2023/2023-03-02-buffalo.md
@@ -2,32 +2,29 @@
 layout: concert
 categories: performance
 describe: "Ensemble-in-Residence, University at Buffalo. Works by Sam Pluta, Victoria Cheah, Zachary James Watkins, and more"
-date: 2022-03-29
+date: 2023-03-02
 time: "7:00pm"
 location:
-  institution:
-  building:
-  venue: University at Buffalo
-  address:
+  institution: University at Buffalo
+  building: 
+  venue: Lippes Hall
+  address: 103 Center For The Arts
   city: Buffalo
   state: NY
-  zip:
+  zip: 14260
 program:
-- composer: Sam Pluta
-  title:
+- composer: Tonia Ko
+  title: Breath, Contained II
+- composer: Heather Stebbins
+  title: Ursa Major
 - composer: David Felder
-  title:
-- composer: Victoria Cheah
-  title:
-- composer: Zachary James Watkins
-  title:
-
-
-
+  title: partial [dist]res[s]toration
+- composer: Jason Thorpe Buchanan
+  title: all-forgetting-is-retrieval
 text:
   below: ""
 thumbnail: updates/ibarra_berkeley_250x125.jpg
 header: header-switch-copper.jpg
 ---
 
-Our second residency as ensemble-in-residence at the the University at Buffalo includes new commissions from Sam Pluta, Victoria Cheah, and Zachary James Watkins following their NYC premieres in February.
+Our second residency as ensemble-in-residence at the the University at Buffalo includes a recording session of works by graduate students, as well as a concert of works featuring Tonia Ko, Heather Stebbins, David Felder, and Jason Thorpe Buchanan.
