--- a/_posts/concerts-2025/2025-9-12-EMPAC.md
+++ b/_posts/concerts-2025/2025-9-12-EMPAC.md
@@ -1,7 +1,7 @@
 ---
 layout: concert
 categories: performance
-describe: "EMPAC, Troy, NY. New commissions from Igor Santos, Julie Herndon, and a collaborative work between Jason Thorpe Buchanan, Christopher Chandler, and the [Switch~ Ensemble] with audiovisual processing system. Three World Premieres."
+describe: "EMPAC. New commissions from Igor Santos, Julie Herndon, and a collaborative work between Jason Thorpe Buchanan, Christopher Chandler, and the [Switch~ Ensemble] with audiovisual processing system."
 date: 2025-09-12
 time:
 location:
