added novalis festival

--- a/_posts/concerts-2023/2023-03-02-buffalo.md
+++ b/_posts/concerts-2023/2023-03-02-buffalo.md
@@ -27,4 +27,4 @@ thumbnail: updates/ibarra_berkeley_250x125.jpg
 header: header-switch-copper.jpg
 ---
 
-Our second residency as ensemble-in-residence at the the University at Buffalo includes a recording session of works by graduate students, as well as a concert of works featuring Tonia Ko, Heather Stebbins, David Felder, and Jason Thorpe Buchanan.
+Our second residency as ensemble-in-residence at the University at Buffalo includes a recording session of works by graduate students, as well as a concert of works featuring Tonia Ko, Heather Stebbins, David Felder, and Jason Thorpe Buchanan.
