indiana second try with zip

--- a/_posts/concerts-2024/2024-11-02-indiana.md
+++ b/_posts/concerts-2024/2024-11-02-indiana.md
@@ -1,25 +1,22 @@
 ---
 layout: concert
 categories: performance
-describe: "Ensemble-in-Residence, Indiana University. Works by Alex Mincek, Igor C. Silva, and world premieres by student composers."
+describe: "Ensemble-in-Residence, Jacobs School of Music, Indiana University. Works by Alex Mincek, Igor C. Silva, and world premieres by student composers."
 date: 2024-11-02
 time: "7:00pm"
 location:
   institution: Indiana University
   building: 
-  venue: 
+  venue: Jacobs School of Music
   address: 
   city: Bloomington
+  zip: 47405
 program:
 - composer: Alex Mincek
   title: 
-  year: 
 - composer: Igor C Silva
   title: Smart-alienation
   year: 2016
-- composer: 
-  title: 
-  year: 
 text:
   below: ""
 thumbnail: updates/2024/indiana-university.jpg
