small html load time optimizations

--- a/_posts/concerts-2024/2024-10-11-novalis.md
+++ b/_posts/concerts-2024/2024-10-11-novalis.md
@@ -7,7 +7,7 @@ time: "7:00pm"
 location:
   institution: Novalis Festival
   building: 
-  venue: 
+  venue: Novalis Festival
   address: 
   city: Osijek
   country: Croatia
