--- a/_posts/concerts-2024/2024-11-02-indiana.md
+++ b/_posts/concerts-2024/2024-11-02-indiana.md
@@ -10,6 +10,7 @@ location:
   venue: Jacobs School of Music
   address: 
   city: Bloomington
+  state: Indiana
   zip: 47405
 program:
 - composer: Alex Mincek
