IU and JiB repertoire + programs

--- a/_posts/concerts-2024/2024-11-02-indiana.md
+++ b/_posts/concerts-2024/2024-11-02-indiana.md
@@ -1,7 +1,8 @@
 ---
 layout: concert
 categories: performance
-describe: "Ensemble-in-Residence, Jacobs School of Music, Indiana University. Works by Alex Mincek, Igor C. Silva, and world premieres by student composers."
+describe: "Ensemble-in-Residence, Jacobs School of Music, Indiana University. Works by Julius Eastman,
+Alex Mincek, Clara Iannotta, Lisa Streich, Gerard Pesson, and world premieres by student composers."
 date: 2024-11-02
 time: "7:00pm"
 location:
@@ -13,11 +14,21 @@ location:
   state: Indiana
   zip: 47405
 program:
+- composer: Julius Eastman
+  title: Buddha
+  year: 1984
+- composer: Clara Iannotta
+  title: dead wasps in the jam-jar (i)
+  year: 2015
+- composer: Lisa Streich
+  title: ASCHE
+  year: 2015
 - composer: Alex Mincek
-  title: 
-- composer: Igor C Silva
-  title: Smart-alienation
-  year: 2016
+  title: Pendulum III
+  year: 2009
+- composer: Gerard Pesson
+  title: Nocturnes en quatuor
+  year: 1987
 text:
   below: ""
 thumbnail: updates/2024/indiana-university.jpg
