--- a/_posts/concerts-2023/2023-03-02-buffalo.md
+++ b/_posts/concerts-2023/2023-03-02-buffalo.md
@@ -24,7 +24,7 @@ program:
 text:
   below: ""
 thumbnail: updates/ibarra_berkeley_250x125.jpg
-header: header-switch-copper.jpg
+header: headers/2023/1000px/AFIR-reh22-1_1000px.jpg
 ---
 
 Our second residency as ensemble-in-residence at the University at Buffalo includes a recording session of works by graduate students, as well as a concert of works featuring Tonia Ko, Heather Stebbins, David Felder, and Jason Thorpe Buchanan.
