--- a/_posts/concerts-2024/2024-11-02-indiana.md
+++ b/_posts/concerts-2024/2024-11-02-indiana.md
@@ -32,7 +32,7 @@ program:
 text:
   below: ""
 thumbnail: updates/2024/indiana-university.jpg
-header: header-switch-copper.jpg
+header: headers/2025/1000px/Switch-IU-residency_1000px.jpg
 ---
 
 Ensemble-in-residence at Indiana University, Bloomington. Works by Alex Mincek, Igor C. Silva, and world premieres by student composers.
